add multilayer .pt vector loading, like gguf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "datasets",
     "matplotlib",
     "accelerate",
+    "gguf>=0.17.1",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
