--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "better-auth": "^1.3.34",
+    "lucide-react": "^0.408.0",
     "next": "15.4.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
