fix some dependency stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "fastapi>=0.123.0",
     "uvicorn>=0.38.0",
     "setuptools>=80.9.0",
+    "transformers>=4.57.3",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
