--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "uvicorn>=0.38.0",
     "setuptools>=80.9.0",
     "transformers>=4.57.3",
+    "hf-transfer>=0.1.9",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
