--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "setuptools>=80.9.0",
     "transformers>=4.57.3",
     "hf-transfer>=0.1.9",
+    "numpy==2.2",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
